<resources>
    <string name="app_name">HiChat</string>
    <string name="action_settings">Settings</string>
    <string name="menu_chats">chats</string>
    <string name="menu_contacts">contacts</string>
    <string name="menu_discover">discover</string>
    <string name="menu_about_me">about me</string>
    <!--activities-->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!--sqlite-->
    <string name="db">db</string>
    <!--connection-->
    <string name="api_url">http:///api/</string>
    <string name="xmpp_host"></string>
    <string name="xmpp_domain">im.com</string>
    <string name="xmpp_port">15222</string>
    <string name="http_json">application/json</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">User Infomation</string>
    <!--chat activity-->
    <string name="button_talk">Hold To Talk</string>
    <string name="button_send">send</string>
    <!--chat tool -->
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Take a Picture</string>
    <string name="attach_location">Location</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice Call</string>
    <string name="attach_video_call">Video Call</string>
    <string name="move_up_to_cancel">slide up cancel sending</string>
    <!--login & register-->
    <string name="username">UserName</string>
    <string name="username_hint">Input your username</string>
    <string name="password">PassWord</string>
    <string name="password_hint">Input your password</string>
    <string name="login_err">Login error, Please try again</string>
    <string name="auth_err">Username or password wrong, please try again</string>
    <string name="register_err">Register error, please try again</string>
    <!--chat-->
    <string name="text_ack_msg">read</string>
    <string name="text_delivered_msg">delivered</string>
</resources>
