<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_back"
    android:orientation="vertical" >

    <include layout="@layout/layout_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

            <EditText
                android:id="@+id/et_usertel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:paddingLeft="95dp"
                android:singleLine="true"
                android:maxLength="11"
                android:textColorHint="@color/login_input_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_usertel"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/username"
                android:textColor="@color/login_text_color"
                android:textSize="16sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/password_hint"
                android:paddingLeft="95dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/login_input_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/password"
                android:textColor="@color/login_text_color"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg_green"
            android:enabled="false"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>



</LinearLayout>