<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    >
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dip"
        android:background="@color/fragment_activity_frame_color" />
    <RadioGroup
        android:id="@+id/tabs_rg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dip"
        android:gravity="center"
        android:background="@color/activity_back"
        android:orientation="horizontal" >
        <RadioButton
            android:id="@+id/tab_rb_chats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/menu_chats_selector"
            android:gravity="center"
            android:text="@string/menu_chats"
            android:textColor="@drawable/menu_chats_selector"
            android:textSize="12sp" >
        </RadioButton>

        <RadioButton
            android:id="@+id/tab_rb_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/menu_contacts_selector"
            android:gravity="center"
            android:text="@string/menu_contacts"
            android:textColor="@drawable/menu_contacts_selector"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/tab_rb_discover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/menu_discover_selector"
            android:gravity="center"
            android:text="@string/menu_discover"
            android:textColor="@drawable/menu_discover_selector"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/tab_rb_about_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@null"
            android:drawableTop="@drawable/menu_about_me_selector"
            android:gravity="center"
            android:text="@string/menu_about_me"
            android:textColor="@drawable/menu_about_me_selector"
            android:textSize="12sp" />
    </RadioGroup>
</LinearLayout>
